Change and add destinations to small villages in Germany

--- a/css/app.css
+++ b/css/app.css
@@ -51,10 +51,22 @@ h2 {
     text-shadow: 0 0 5px #01579b;
 }
 
-#belize {
+#menne{
     background-color: #4dd0e1;
 }
 
-#barcelona {
+#molpe {
     background-color: #800000;
+}
+
+#boeckis{
+    background-color: #abc123;
+}
+
+#wirrensegel{
+    background-color: #789789;
+}
+
+#mailand{
+    background-color: #aaf258;
 }
